--- a/css/style.css
+++ b/css/style.css
@@ -215,9 +215,14 @@ nav {
 }
 
 /* menu */
+.menu-wrap {
+    border: 1px solid rgba(255, 255, 255, 0.1);
+    border-radius: 40px;
+}
 ul.menu {
     gap: 3rem;
     align-items: center;
+    padding: 0 30px 0 9px;
 }
 
 ul.menu li a {
@@ -331,7 +336,7 @@ p.banner-text {
     width: 15px;
     height: 15px;
     background-image: url('../images/play-solid.svg');
-  background-repeat: no-repeat;
+    background-repeat: no-repeat;
     position: absolute;
     top: 50%;
     left: 55%;
